--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="google-site-verification" content="fW3sPu9YUYvnuwiBwrYQwf56wV9VbvzwYBiSB_cLBIU" />
   </head>
   <body>
     <div id="root"></div>
